welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:2: error: type mismatch;
 found   : Int(1)
 required: Boolean
while(1){	while(!estSurBiscuit()){
      ^